--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: MOE IX
+site_name: MoeDove IX
 theme:
   name: material
   # name: windmill-dark
@@ -24,8 +24,8 @@ nav:
   - PoP List: PoP-List.md
   - Member List: members.md
   - Route Server: RS.md
-site_url: https://moeiix.top
-repo_url: https://github.com/MoeIX-SEA/MOEIX-PAGE
+site_url: https://moeio.org
+repo_url: https://github.com/MoeDove-LLC/MOEIX-PAGE
 edit_uri: blob/main/docs/
 plugins:
   - search:
