--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,17 @@ pymdown-extensions
 #Add pip package if needed
 #mkdocs-bootswatch
 #mkdocs-minify-plugin
+# Requirements for core
+jinja2~=3.0
+markdown~=3.2
+mkdocs~=1.6
+mkdocs-material-extensions~=1.3
+pygments~=2.16
+pymdown-extensions~=10.2
+
+# Requirements for plugins
+babel~=2.10
+colorama~=0.4
+paginate~=0.5
+regex>=2022.4
+requests~=2.26
