--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,8 @@ pymdown-extensions
 #mkdocs-minify-plugin
 # Requirements for core
 jinja2~=3.0
-markdown~=3.2
-mkdocs~=1.6
-mkdocs-material-extensions~=1.3
+markdown
+mkdocs-material-extensions
 pygments~=2.16
 pymdown-extensions~=10.2
 
