--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
   - PoP List: PoP-List.md
   - Route Server: RS.md
 site_url: https://moeio.org
-repo_url: https://github.com/MoeDove-LLC/MOEIX-PAGE
+#repo_url: https://github.com/MoeDove-LLC/MOEIX-PAGE
 edit_uri: blob/main/docs/
 plugins:
   - search:
